--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="form.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Student Survey</title>
+    <title>Student Survey1</title>
   </head>
   <body background-color:linen;>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
